[package]
name = "art_dice"
description = "Contains structures for building dice with arbitrary symbols and functions for determining roll probabilities"
license = "MIT"
homepage = "https://github.com/ChefPancake/art_dice"
repository = "https://github.com/ChefPancake/art_dice"
documentation = "https://docs.rs/art_dice"
version = "0.3.0"
authors = ["ChefPancake"]
edition = "2018"
readme = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"